@YELP_HELP_RULES@

HELP_ID = gthumb

HELP_FILES = \
	index.page \
	attributes.page \
	strftime.page \
	introduction.page \
	browser.page \
	batch-rotate.page \
	batch-convert-format.page \
	batch-resize.page \
	batch-change-date.page \
	batch-scripts.page \
	thumbnails.page \
	thumbnail-pane.page \
	rename-series.page \
	edit-save-undo-redo.page \
	edit-colors.page \
	edit-rotate.page \
	edit-resize-crop.page \
	edit-redeye.page \
	extensions.page \
	gimp.page \
	viewer.page \
	fullscreen.page \
	sorting.page \
	filtering.page \
	printing.page \
	shortcuts.page \
	sharing-disc.page \
	sharing-social.page \
	wallpaper.page \
	bookmarks.page \
	import.page \
	slideshow.page \
	file-copy-move.page \
	legal.xml

HELP_MEDIA = \
	figures/comment.png \
	figures/main-win.png \
	figures/nav-button.png \
	figures/preferences.png \
	figures/palette.png \
	figures/thumbnail-pane.png \
	figures/general-filter.png \
	figures/specific-filter.png \
	figures/import.png \
	figures/import-pref-auto-folder.png \
        figures/import-pref-custom-format.png

EXTRA_DIST = album-theme-format.txt

HELP_LINGUAS = cs de el es eu fr oc sl sv zh_CN
